Minor changes to html and added images

--- a/index.html
+++ b/index.html
@@ -121,14 +121,26 @@
             </li>
 
             <li class="social-item">
-              <a href="#" class="social-link">
-                <ion-icon name="logo-twitter"></ion-icon>
+              <a href="https://github.com/danshitkar" class="social-link">
+                <ion-icon name="logo-github"></ion-icon>
               </a>
             </li>
 
             <li class="social-item">
-              <a href="#" class="social-link">
+              <a
+                href="https://www.instagram.com/hmmble.bee/"
+                class="social-link"
+              >
                 <ion-icon name="logo-instagram"></ion-icon>
+              </a>
+            </li>
+
+            <li class="social-item">
+              <a
+                href="https://www.linkedin.com/in/dshitkar/"
+                class="social-link"
+              >
+                <ion-icon name="logo-linkedin"></ion-icon>
               </a>
             </li>
           </ul>
@@ -173,10 +185,10 @@
 
           <section class="about-text">
             <p>
-              I'm a Software Developer and AI Enthusiast from Thane, India,
-              working in software and web development. I enjoy spending time
-              with my cat, going on adventures and solving bugs and issues in my
-              spare time.
+              I'm a Software Developer and an AI Enthusiast from Thane, India,
+              currently residing in Portland, OR working in software and web
+              development. I enjoy spending time with my cat, going on
+              adventures and solving bugs and issues in my spare time.
             </p>
 
             <p>
@@ -189,7 +201,7 @@
           <!-- service -->
 
           <section class="service">
-            <h3 class="h3 service-title">What I'm doing</h3>
+            <h3 class="h3 service-title">What am I currently doing?</h3>
 
             <ul class="service-list">
               <li class="service-item">
@@ -1158,10 +1170,11 @@
           <section class="mapbox" data-mapbox>
             <figure>
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
-                width="400"
-                height="300"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d89419.96221944489!2d-122.73678563939556!3d45.5428051107255!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54950b0b7da97427%3A0x1c36b9e6f6d18591!2sPortland%2C%20OR!5e0!3m2!1sen!2sus!4v1737866495870!5m2!1sen!2sus"
+                width="600"
+                height="450"
                 loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
               ></iframe>
             </figure>
           </section>
