--- a/index.html
+++ b/index.html
@@ -546,26 +546,23 @@
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  University school of the arts
+                  Portland State University
                 </h4>
 
-                <span>2007 — 2008</span>
+                <span>2022 - 2024</span>
 
-                <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
-                </p>
+                <p class="timeline-text">Master's in Computer Science</p>
               </li>
 
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">New york academy of art</h4>
+                <h4 class="h4 timeline-item-title">
+                  Alamuri Ratnamala Institute of Engineering and Technology
+                </h4>
 
-                <span>2006 — 2007</span>
+                <span>2019 - 2022</span>
 
                 <p class="timeline-text">
-                  Ratione voluptatem sequi nesciunt, facere quisquams facere
-                  menda ossimus, omnis voluptas assumenda est omnis..
+                  Bachelor's in Information Technology Engineering
                 </p>
               </li>
 
