--- a/index.html
+++ b/index.html
@@ -568,16 +568,12 @@
 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  High school of art and design
+                  Vidya Prasarak Mandal Polytechnic
                 </h4>
 
-                <span>2002 — 2004</span>
+                <span>2016 — 2019</span>
 
-                <p class="timeline-text">
-                  Duis aute irure dolor in reprehenderit in voluptate, quila
-                  voluptas mag odit aut fugit, sed consequuntur magni dolores
-                  eos.
-                </p>
+                <p class="timeline-text">Diploma in Computer Engineering</p>
               </li>
             </ol>
           </section>
@@ -593,38 +589,68 @@
 
             <ol class="timeline-list">
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Creative director</h4>
+                <h4 class="h4 timeline-item-title">State Street, USA | Software Developer</h4>
 
-                <span>2015 — Present</span>
+                <span>March 2024 — Present</span>
 
-                <p class="timeline-text">
-                  Nemo enim ipsam voluptatem blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et qvuas molestias
-                  exceptur.
-                </p>
+                <ul class="timeline-text">
+                  <li>
+                    Utilized Agile methodologies to manage the full project
+                    lifecycle, ensuring efficient development and delivery.
+                  </li>
+                  <li>
+                    Developed and maintained responsive single-page applications
+                    (SPAs) using React.js, AngularJS, JavaScript, jQuery, HTML5,
+                    and CSS3, incorporating predefined components from NPM and
+                    Redux for state management.
+                  </li>
+                  <li>
+                    Implemented component-based user interfaces using JSF (Java
+                    Server Faces) and leveraged the Angular framework for
+                    enhanced front-end functionality.
+                  </li>
+                  <li>
+                    Extensively utilized Spring Framework modules, including
+                    IOC, Auto Wiring, JDBC Templates, Spring Security, and
+                    Spring Batch, to ensure reliable and efficient data
+                    processing.
+                  </li>
+                  <li>
+                    Designed and deployed Spring Boot microservices in Docker
+                    containers on AWS EC2, leveraging Elastic Load Balancers and
+                    auto-scaling groups for fault tolerance, cost efficiency,
+                    and high availability.
+                  </li>
+                  <li>
+                    Developed and tested web services using JAX-WS, SOAP, and
+                    the SOAP UI tool, and transitioned monolithic applications
+                    into microservices using Spring Boot, with unit testing via
+                    JUnit and PowerMock.
+                  </li>
+                  <li>
+                    Designed and developed applications using Angular,
+                    TypeScript, Bootstrap, Node.js, NPM, and MongoDB for modern
+                    and scalable solutions.
+                  </li>
+                </ul>
               </li>
 
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Art director</h4>
+                <h4 class="h4 timeline-item-title">Cybage Software, India | Software Developer</h4>
 
-                <span>2013 — 2015</span>
+                <span>Jan 2021 — Aug 2022</span>
 
-                <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
-                </p>
-              </li>
-
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Web designer</h4>
-
-                <span>2010 — 2013</span>
-
-                <p class="timeline-text">
-                  Nemo enims ipsam voluptatem, blanditiis praesentium voluptum
-                  delenit atque corrupti, quos dolores et quas molestias
-                  exceptur.
+                <ul class="timeline-text">
+                  <li>Applied Waterfall methodologies based on project requirements, ensuring adherence to specifications and efficient project delivery.</li>
+                  <li>Designed and implemented dynamic, responsive UIs using HTML5, CSS3, Bootstrap, JavaScript, React.js, and collaborated with designers using tools like Figma to translate mockups into functional interfaces.</li>
+                  <li>Developed robust server-side solutions using Servlets, JSP, JDBC, Spring MVC, and backend APIs with Node.js, Express, and Spring Boot.</li>
+                  <li>Leveraged Spring Framework modules, including Spring MVC, DI, AOP, ORM, REST, and Security, to optimize application performance, improving customer satisfaction by 25% and reducing maintenance costs by 20%.</li>
+                  <li>Established and maintained CI/CD pipelines using Maven, Gradle, and Jenkins to automate build, testing, and deployment processes for reliable software delivery.</li>
+                  <li>Utilized Kubernetes for the runtime environment of the CI/CD system to build, test, and deploy.</li>
+                  <li>Involved in using Bootstrap and Node.js for the development of UI.</li>
+                  <li>Developed and modified Struts-based Action Servlets and JSPs following MVC architecture to ensure scalable and maintainable applications.</li>
+                  <li>Enhanced data utilization by creating and managing stored procedures, triggers, functions, and cursors in MySQL, MongoDB, and other relational databases.</li>
+                </ul>
                 </p>
               </li>
             </ol>
@@ -632,52 +658,212 @@
 
           <section class="skill">
             <h3 class="h3 skills-title">My skills</h3>
-
-            <ul class="skills-list content-card">
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Web design</h5>
-                  <data value="80">80%</data>
+            <div class="skills-container">
+              <div class="skills-category">
+                <h4 class="skills-category-title">Methodology</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">SDLC</span>
+                  <span class="skill-tag">Waterfall</span>
+                  <span class="skill-tag">Agile</span>
                 </div>
+              </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%"></div>
+              <div class="skills-category">
+                <h4 class="skills-category-title">Programming Languages</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Java</span>
+                  <span class="skill-tag">C++</span>
+                  <span class="skill-tag">PL/SQL</span>
+                  <span class="skill-tag">Python</span>
                 </div>
-              </li>
+              </div>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Graphic design</h5>
-                  <data value="70">70%</data>
+              <div class="skills-category">
+                <h4 class="skills-category-title">Frameworks</h4>
+                <div class="skills-tags"></div>
+                  <span class="skill-tag">Spring MVC</span>
+                  <span class="skill-tag">Spring</span>
+                  <span class="skill-tag">Hibernate</span>
+                  <span class="skill-tag">Spring Boot</span>
+                  <span class="skill-tag">Spring Security</span>
+                  <span class="skill-tag">Spring Data JPA</span>
+                  <span class="skill-tag">Node.js</span>
+                  <span class="skill-tag">React.js</span>
+                  <span class="skill-tag">Angular JS</span>
+                  <span class="skill-tag">ASP.NET</span>
+                  <span class="skill-tag">VB.NET</span>
                 </div>
+              </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 70%"></div>
+              <div class="skills-category">
+                <h4 class="skills-category-title">J2EE Technologies</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Servlets</span>
+                  <span class="skill-tag">JSP</span>
+                  <span class="skill-tag">JDBC</span>
+                  <span class="skill-tag">JUnit</span>
+                  <span class="skill-tag">JAXB</span>
+                  <span class="skill-tag">JMS</span>
+                  <span class="skill-tag">JSTL</span>
+                  <span class="skill-tag">Multi-threading</span>
+                  <span class="skill-tag">EJB</span>
+                  <span class="skill-tag">JavaBeans</span>
+                  <span class="skill-tag">JSF</span>
+                  <span class="skill-tag">Multithreading</span>
+                  <span class="skill-tag">Collections</span>
                 </div>
-              </li>
+              </div>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">Branding</h5>
-                  <data value="90">90%</data>
+              <div class="skills-category">
+                <h4 class="skills-category-title">IDEs</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">IntelliJ IDEA</span>
+                  <span class="skill-tag">Eclipse</span>
+                  <span class="skill-tag">Visual Studio Code</span>
                 </div>
+              </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%"></div>
+              <div class="skills-category">
+                <h4 class="skills-category-title">Web Technologies</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">HTML5</span>
+                  <span class="skill-tag">CSS3</span>
+                  <span class="skill-tag">JavaScript</span>
+                  <span class="skill-tag">RESTful APIs</span>
+                  <span class="skill-tag">GraphQL</span>
+                  <span class="skill-tag">TypeScript</span>
+                  <span class="skill-tag">jQuery</span>
+                  <span class="skill-tag">Ajax</span>
+                  <span class="skill-tag">XML</span>
+                  <span class="skill-tag">JSON</span>
+                  <span class="skill-tag">Bootstrap</span>
                 </div>
-              </li>
+              </div>
 
-              <li class="skills-item">
-                <div class="title-wrapper">
-                  <h5 class="h5">WordPress</h5>
-                  <data value="50">50%</data>
+              <div class="skills-category">
+                <h4 class="skills-category-title">DevOps</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Docker</span>
+                  <span class="skill-tag">Kubernetes</span>
+                  <span class="skill-tag">Jenkins</span>
+                  <span class="skill-tag">Bamboo</span>
+                  <span class="skill-tag">Ansible</span>
                 </div>
+              </div>
 
-                <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%"></div>
+              <div class="skills-category">
+                <h4 class="skills-category-title">Cloud Platforms</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">AWS</span>
+                  <span class="skill-tag">Azure</span>
+                  <span class="skill-tag">Google Cloud Platform (GCP)</span>
                 </div>
-              </li>
-            </ul>
+              </div>
+
+              <div class="skills-category">
+                <h4 class="skills-category-title">Databases</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Oracle</span>
+                  <span class="skill-tag">MySQL</span>
+                  <span class="skill-tag">SQL Server</span>
+                  <span class="skill-tag">DB2</span>
+                  <span class="skill-tag">PostgreSQL</span>
+                  <span class="skill-tag">MongoDB</span>
+                  <span class="skill-tag">Cassandra</span>
+                  <span class="skill-tag">Cosmos DB</span>
+                  <span class="skill-tag">DynamoDB</span>
+                </div>
+              </div>
+
+              <div class="skills-category">
+                <h4 class="skills-category-title">Version Control & Other Tools</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Git</span>
+                  <span class="skill-tag">SVN</span>
+                  <span class="skill-tag">Gitlab</span>
+                  <span class="skill-tag">Bit Bucket</span>
+                  <span class="skill-tag">Maven</span>
+                  <span class="skill-tag">Gradle</span>
+                  <span class="skill-tag">Ant</span>
+                </div>
+              </div>
+
+              <div class="skills-category">
+                <h4 class="skills-category-title">Testing and Logging Tools</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Junit</span>
+                  <span class="skill-tag">Mockito</span>
+                  <span class="skill-tag">Selenium</span>
+                  <span class="skill-tag">TestNG</span>
+                  <span class="skill-tag">Power Mock</span>
+                  <span class="skill-tag">JMeter</span>
+                  <span class="skill-tag">Jest</span>
+                  <span class="skill-tag">Enzyme</span>
+                  <span class="skill-tag">Cucumber</span>
+                  <span class="skill-tag">Log4J</span>
+                </div>
+              </div>
+
+              <div class="skills-category">
+                <h4 class="skills-category-title">Soft Skills</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Effective verbal and written communication</span>
+                  <span class="skill-tag">Problem-solving</span>
+                  <span class="skill-tag">Troubleshooting skills</span>
+                </div>
+              </div>
+
+              <div class="skills-category">
+                <h4 class="skills-category-title">Operating Systems</h4>
+                <div class="skills-tags">
+                  <span class="skill-tag">Windows</span>
+                  <span class="skill-tag">Linux</span>
+                  <span class="skill-tag">Unix</span>
+                </div>
+              </div>
+            </div>
+
+            <style>
+              .skills-container {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 20px;
+              }
+
+              .skills-category {
+                flex: 1 1 300px;
+                background: #f9f9f9;
+                padding: 20px;
+                border-radius: 8px;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+              }
+
+              .skills-category-title {
+                margin-bottom: 10px;
+                font-size: 1.2em;
+                color: #333;
+              }
+
+              .skills-tags {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 10px;
+              }
+
+              .skill-tag {
+                background: #007bff;
+                color: #fff;
+                padding: 5px 10px;
+                border-radius: 5px;
+                font-size: 0.9em;
+              }
+
+              @media (max-width: 768px) {
+                .skills-category {
+                  flex: 1 1 100%;
+                }
+              }
+            </style>
           </section>
         </article>
 
@@ -712,7 +898,7 @@
             <div class="filter-select-box">
               <button class="filter-select" data-select>
                 <div class="select-value" data-selecct-value>
-                  Select category
+                  Select Technology
                 </div>
 
                 <div class="select-icon">
@@ -726,15 +912,15 @@
                 </li>
 
                 <li class="select-item">
-                  <button data-select-item>Web design</button>
+                  <button data-select-item>Python</button>
                 </li>
 
                 <li class="select-item">
-                  <button data-select-item>Applications</button>
+                  <button data-select-item>Java</button>
                 </li>
 
                 <li class="select-item">
-                  <button data-select-item>Web development</button>
+                  <button data-select-item>WebDev</button>
                 </li>
               </ul>
             </div>
