Added additional projects, made changes to the css and js files

--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
     <!-- External Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
 
     <!-- Font Awesome -->
-    <script
-      src="https://kit.fontawesome.com/fa62c117c7.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/fa62c117c7.js" crossorigin="anonymous"></script>
 
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="styles.css" />
@@ -29,9 +23,7 @@
     <!-- Header -->
     <header class="header center">
       <h3>
-        <a href="https://github.com/dshitkar" class="link"
-          >Dhananjay Shitkar.</a
-        >
+        <a href="https://github.com/dshitkar" class="link">Dhananjay Shitkar.</a>
       </h3>
 
       <!-- Navigation -->
@@ -58,11 +50,7 @@
         </button>
 
         <!-- Hamburger Button -->
-        <button
-          type="button"
-          aria-label="toggle navigation"
-          class="btn btn--icon nav__hamburger"
-        >
+        <button type="button" aria-label="toggle navigation" class="btn btn--icon nav__hamburger">
           <i aria-hidden="true" class="fas fa-bars"></i>
         </button>
       </nav>
@@ -77,7 +65,7 @@
           <img src="assets/images/IMG_1909.png" alt="Headshot of Dhananjay Shitkar" class="headshot" />
         </div>
         <h1>Hi, I am <span class="about__name">Dhananjay Shitkar.</span></h1>
-        <h2 class="about__role">Portland State University 2024.</h2>
+        <h2 class="about__role">Portland State University 2024 | Software Developer | AI Enthusiast</h2>
         <p class="about__desc">
           <ul>
             <li>Around 3 years of experience in software development, specializing in object-oriented programming, Service-Oriented Architecture, and web-based enterprise applications using Java/J2EE technologies, with expertise across the complete SDLC.</li>
@@ -95,19 +83,11 @@
             <span class="btn btn--outline">Resume</span>
           </a>
 
-          <a
-            href="https://github.com/dshitkar"
-            aria-label="github"
-            class="link link--icon"
-          >
+          <a href="https://github.com/dshitkar" aria-label="github" class="link link--icon">
             <i aria-hidden="true" class="fab fa-github"></i>
           </a>
 
-          <a
-            href="https://linkedin.com/in/dshitkar"
-            aria-label="linkedin"
-            class="link link--icon"
-          >
+          <a href="https://linkedin.com/in/dshitkar" aria-label="linkedin" class="link link--icon">
             <i aria-hidden="true" class="fab fa-linkedin"></i>
           </a>
         </div>
@@ -132,11 +112,7 @@
               <li class="project__stack-item">HTML</li>
             </ul>
 
-            <a
-              href="https://github.com/dshitkar/HermPDX"
-              aria-label="source code"
-              class="link link--icon"
-            >
+            <a href="https://github.com/dshitkar/HermPDX" aria-label="source code" class="link link--icon">
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
           </div>
@@ -153,11 +129,7 @@
               <li class="project__stack-item">Python</li>
             </ul>
 
-            <a
-              href="https://github.com/dshitkar/birvin"
-              aria-label="source code"
-              class="link link--icon"
-            >
+            <a href="https://github.com/dshitkar/birvin" aria-label="source code" class="link link--icon">
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
           </div>
@@ -178,6 +150,8 @@
             </ul>
           </div>
         </div>
+
+        <a href="more-projects.html" class="btn btn--outline center" style="margin-top: 20px;">More Projects</a>
       </section>
 
       <!-- Skills Section -->
